// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageSend disables sending if not connected 1`] = `
<tm-page-stub
  data-title="Send"
  menubody=""
  subtitle=""
  title=""
>
  <template>
    <tm-balance-stub
      tabs=""
    />
     
    <tool-bar-stub />
  </template>
   
  <tm-form-struct-stub
    submit="function () { [native code] }"
    width=""
  >
    <tm-part-stub
      title="Denomination Options"
    >
      <tm-form-group-stub
        fieldid="send-denomination"
        fieldlabel="Denomination"
      >
        <tm-field-stub
          id="send-denomination"
          options="[object Object],[object Object]"
          placeholder="Select token..."
          type="select"
          value="mycoin"
        />
         
        <!---->
      </tm-form-group-stub>
    </tm-part-stub>
     
    <tm-part-stub
      title="Transaction Details"
    >
      <tm-form-group-stub
        fieldid="send-address"
        fieldlabel="Send To"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-address"
            placeholder="Address"
            type="text"
            value="tb1mjt6dcdru8lgdz64h2fu0lrzvd5zv8sfcvkv2l"
          />
        </tm-field-group-stub>
         
        <!---->
      </tm-form-group-stub>
       
      <tm-form-group-stub
        fieldid="send-amount"
        fieldlabel="Amount"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-amount"
            max="1000"
            min="1"
            placeholder="Amount"
            type="number"
            value="2"
          />
        </tm-field-group-stub>
         
        <!---->
         
        <!---->
      </tm-form-group-stub>
       
      <hr />
    </tm-part-stub>
     
    <tm-part-stub>
      <tm-form-group-stub
        fieldid="password"
        fieldlabel="Account password"
      >
        <tm-field-stub
          id="password"
          placeholder="password..."
          type="password"
          value="1234567890"
        />
         
        <!---->
         
        <input
          id="showPasswordCheckbox"
          type="checkbox"
        />
         
        <label
          for="showPasswordCheckbox"
        >
          Show password
        </label>
      </tm-form-group-stub>
    </tm-part-stub>
     
    <div>
      <tm-btn-stub
        color="primary"
        disabled="disabled"
        value="Connecting..."
      />
    </div>
  </tm-form-struct-stub>
   
  <!---->
</tm-page-stub>
`;

exports[`PageSend has the expected html structure 1`] = `
<tm-page-stub
  data-title="Send"
  menubody=""
  subtitle=""
  title=""
>
  <template>
    <tm-balance-stub
      tabs=""
    />
     
    <tool-bar-stub />
  </template>
   
  <tm-form-struct-stub
    submit="function () { [native code] }"
    width=""
  >
    <tm-part-stub
      title="Denomination Options"
    >
      <tm-form-group-stub
        fieldid="send-denomination"
        fieldlabel="Denomination"
      >
        <tm-field-stub
          id="send-denomination"
          options="[object Object],[object Object]"
          placeholder="Select token..."
          type="select"
          value="mycoin"
        />
         
        <!---->
      </tm-form-group-stub>
    </tm-part-stub>
     
    <tm-part-stub
      title="Transaction Details"
    >
      <tm-form-group-stub
        fieldid="send-address"
        fieldlabel="Send To"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-address"
            placeholder="Address"
            type="text"
            value=""
          />
        </tm-field-group-stub>
         
        <!---->
      </tm-form-group-stub>
       
      <tm-form-group-stub
        fieldid="send-amount"
        fieldlabel="Amount"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-amount"
            max="1000"
            min="1"
            placeholder="Amount"
            type="number"
            value="0"
          />
        </tm-field-group-stub>
         
        <!---->
         
        <!---->
      </tm-form-group-stub>
       
      <hr />
    </tm-part-stub>
     
    <tm-part-stub>
      <tm-form-group-stub
        fieldid="password"
        fieldlabel="Account password"
      >
        <tm-field-stub
          id="password"
          placeholder="password..."
          type="password"
          value=""
        />
         
        <tm-form-msg-stub
          name="Password"
          type="required"
        />
         
        <input
          id="showPasswordCheckbox"
          type="checkbox"
        />
         
        <label
          for="showPasswordCheckbox"
        >
          Show password
        </label>
      </tm-form-group-stub>
    </tm-part-stub>
     
    <div>
      <tm-btn-stub
        color="primary"
        id="send-btn"
        value="Send Tokens"
      />
    </div>
  </tm-form-struct-stub>
   
  <!---->
</tm-page-stub>
`;

exports[`PageSend should show address required error 1`] = `
<tm-page-stub
  data-title="Send"
  menubody=""
  subtitle=""
  title=""
>
  <template>
    <tm-balance-stub
      tabs=""
    />
     
    <tool-bar-stub />
  </template>
   
  <tm-form-struct-stub
    submit="function () { [native code] }"
    width=""
  >
    <tm-part-stub
      title="Denomination Options"
    >
      <tm-form-group-stub
        fieldid="send-denomination"
        fieldlabel="Denomination"
      >
        <tm-field-stub
          id="send-denomination"
          options="[object Object],[object Object]"
          placeholder="Select token..."
          type="select"
          value="mycoin"
        />
         
        <!---->
      </tm-form-group-stub>
    </tm-part-stub>
     
    <tm-part-stub
      title="Transaction Details"
    >
      <tm-form-group-stub
        error="true"
        fieldid="send-address"
        fieldlabel="Send To"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-address"
            placeholder="Address"
            type="text"
            value=""
          />
        </tm-field-group-stub>
         
        <tm-form-msg-stub
          name="Address"
          type="required"
        />
      </tm-form-group-stub>
       
      <tm-form-group-stub
        fieldid="send-amount"
        fieldlabel="Amount"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-amount"
            max="1000"
            min="1"
            placeholder="Amount"
            type="number"
            value="2"
          />
        </tm-field-group-stub>
         
        <!---->
         
        <!---->
      </tm-form-group-stub>
       
      <hr />
    </tm-part-stub>
     
    <tm-part-stub>
      <tm-form-group-stub
        fieldid="password"
        fieldlabel="Account password"
      >
        <tm-field-stub
          id="password"
          placeholder="password..."
          type="password"
          value="1234567890"
        />
         
        <!---->
         
        <input
          id="showPasswordCheckbox"
          type="checkbox"
        />
         
        <label
          for="showPasswordCheckbox"
        >
          Show password
        </label>
      </tm-form-group-stub>
    </tm-part-stub>
     
    <div>
      <tm-btn-stub
        color="primary"
        id="send-btn"
        value="Send Tokens"
      />
    </div>
  </tm-form-struct-stub>
   
  <!---->
</tm-page-stub>
`;

exports[`PageSend should show bech32 error when address length is too long 1`] = `
<tm-page-stub
  data-title="Send"
  menubody=""
  subtitle=""
  title=""
>
  <template>
    <tm-balance-stub
      tabs=""
    />
     
    <tool-bar-stub />
  </template>
   
  <tm-form-struct-stub
    submit="function () { [native code] }"
    width=""
  >
    <tm-part-stub
      title="Denomination Options"
    >
      <tm-form-group-stub
        fieldid="send-denomination"
        fieldlabel="Denomination"
      >
        <tm-field-stub
          id="send-denomination"
          options="[object Object],[object Object]"
          placeholder="Select token..."
          type="select"
          value="mycoin"
        />
         
        <!---->
      </tm-form-group-stub>
    </tm-part-stub>
     
    <tm-part-stub
      title="Transaction Details"
    >
      <tm-form-group-stub
        error="true"
        fieldid="send-address"
        fieldlabel="Send To"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-address"
            placeholder="Address"
            type="text"
            value="asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf"
          />
        </tm-field-group-stub>
         
        <tm-form-msg-stub
          name="Address"
          type="bech32"
        />
      </tm-form-group-stub>
       
      <tm-form-group-stub
        fieldid="send-amount"
        fieldlabel="Amount"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-amount"
            max="1000"
            min="1"
            placeholder="Amount"
            type="number"
            value="2"
          />
        </tm-field-group-stub>
         
        <!---->
         
        <!---->
      </tm-form-group-stub>
       
      <hr />
    </tm-part-stub>
     
    <tm-part-stub>
      <tm-form-group-stub
        fieldid="password"
        fieldlabel="Account password"
      >
        <tm-field-stub
          id="password"
          placeholder="password..."
          type="password"
          value="1234567890"
        />
         
        <!---->
         
        <input
          id="showPasswordCheckbox"
          type="checkbox"
        />
         
        <label
          for="showPasswordCheckbox"
        >
          Show password
        </label>
      </tm-form-group-stub>
    </tm-part-stub>
     
    <div>
      <tm-btn-stub
        color="primary"
        id="send-btn"
        value="Send Tokens"
      />
    </div>
  </tm-form-struct-stub>
   
  <!---->
</tm-page-stub>
`;

exports[`PageSend should show bech32 error when address length is too short 1`] = `
<tm-page-stub
  data-title="Send"
  menubody=""
  subtitle=""
  title=""
>
  <template>
    <tm-balance-stub
      tabs=""
    />
     
    <tool-bar-stub />
  </template>
   
  <tm-form-struct-stub
    submit="function () { [native code] }"
    width=""
  >
    <tm-part-stub
      title="Denomination Options"
    >
      <tm-form-group-stub
        fieldid="send-denomination"
        fieldlabel="Denomination"
      >
        <tm-field-stub
          id="send-denomination"
          options="[object Object],[object Object]"
          placeholder="Select token..."
          type="select"
          value="mycoin"
        />
         
        <!---->
      </tm-form-group-stub>
    </tm-part-stub>
     
    <tm-part-stub
      title="Transaction Details"
    >
      <tm-form-group-stub
        error="true"
        fieldid="send-address"
        fieldlabel="Send To"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-address"
            placeholder="Address"
            type="text"
            value="asdf"
          />
        </tm-field-group-stub>
         
        <tm-form-msg-stub
          name="Address"
          type="bech32"
        />
      </tm-form-group-stub>
       
      <tm-form-group-stub
        fieldid="send-amount"
        fieldlabel="Amount"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-amount"
            max="1000"
            min="1"
            placeholder="Amount"
            type="number"
            value="2"
          />
        </tm-field-group-stub>
         
        <!---->
         
        <!---->
      </tm-form-group-stub>
       
      <hr />
    </tm-part-stub>
     
    <tm-part-stub>
      <tm-form-group-stub
        fieldid="password"
        fieldlabel="Account password"
      >
        <tm-field-stub
          id="password"
          placeholder="password..."
          type="password"
          value="1234567890"
        />
         
        <!---->
         
        <input
          id="showPasswordCheckbox"
          type="checkbox"
        />
         
        <label
          for="showPasswordCheckbox"
        >
          Show password
        </label>
      </tm-form-group-stub>
    </tm-part-stub>
     
    <div>
      <tm-btn-stub
        color="primary"
        id="send-btn"
        value="Send Tokens"
      />
    </div>
  </tm-form-struct-stub>
   
  <!---->
</tm-page-stub>
`;

exports[`PageSend should show bech32 error when alphanumeric is wrong 1`] = `
<tm-page-stub
  data-title="Send"
  menubody=""
  subtitle=""
  title=""
>
  <template>
    <tm-balance-stub
      tabs=""
    />
     
    <tool-bar-stub />
  </template>
   
  <tm-form-struct-stub
    submit="function () { [native code] }"
    width=""
  >
    <tm-part-stub
      title="Denomination Options"
    >
      <tm-form-group-stub
        fieldid="send-denomination"
        fieldlabel="Denomination"
      >
        <tm-field-stub
          id="send-denomination"
          options="[object Object],[object Object]"
          placeholder="Select token..."
          type="select"
          value="mycoin"
        />
         
        <!---->
      </tm-form-group-stub>
    </tm-part-stub>
     
    <tm-part-stub
      title="Transaction Details"
    >
      <tm-form-group-stub
        error="true"
        fieldid="send-address"
        fieldlabel="Send To"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-address"
            placeholder="Address"
            type="text"
            value="!@#$!@#$!@#$!@#$!@#$!@#$!@#$!@#$!@#$!@#$"
          />
        </tm-field-group-stub>
         
        <tm-form-msg-stub
          name="Address"
          type="bech32"
        />
      </tm-form-group-stub>
       
      <tm-form-group-stub
        fieldid="send-amount"
        fieldlabel="Amount"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-amount"
            max="1000"
            min="1"
            placeholder="Amount"
            type="number"
            value="2"
          />
        </tm-field-group-stub>
         
        <!---->
         
        <!---->
      </tm-form-group-stub>
       
      <hr />
    </tm-part-stub>
     
    <tm-part-stub>
      <tm-form-group-stub
        fieldid="password"
        fieldlabel="Account password"
      >
        <tm-field-stub
          id="password"
          placeholder="password..."
          type="password"
          value="1234567890"
        />
         
        <!---->
         
        <input
          id="showPasswordCheckbox"
          type="checkbox"
        />
         
        <label
          for="showPasswordCheckbox"
        >
          Show password
        </label>
      </tm-form-group-stub>
    </tm-part-stub>
     
    <div>
      <tm-btn-stub
        color="primary"
        id="send-btn"
        value="Send Tokens"
      />
    </div>
  </tm-form-struct-stub>
   
  <!---->
</tm-page-stub>
`;

exports[`PageSend should trigger confirmation modal if form is correct 1`] = `
<tm-page-stub
  data-title="Send"
  menubody=""
  subtitle=""
  title=""
>
  <template>
    <tm-balance-stub
      tabs=""
    />
     
    <tool-bar-stub />
  </template>
   
  <tm-form-struct-stub
    submit="function () { [native code] }"
    width=""
  >
    <tm-part-stub
      title="Denomination Options"
    >
      <tm-form-group-stub
        fieldid="send-denomination"
        fieldlabel="Denomination"
      >
        <tm-field-stub
          id="send-denomination"
          options="[object Object],[object Object]"
          placeholder="Select token..."
          type="select"
          value="mycoin"
        />
         
        <!---->
      </tm-form-group-stub>
    </tm-part-stub>
     
    <tm-part-stub
      title="Transaction Details"
    >
      <tm-form-group-stub
        fieldid="send-address"
        fieldlabel="Send To"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-address"
            placeholder="Address"
            type="text"
            value="tb1mjt6dcdru8lgdz64h2fu0lrzvd5zv8sfcvkv2l"
          />
        </tm-field-group-stub>
         
        <!---->
      </tm-form-group-stub>
       
      <tm-form-group-stub
        fieldid="send-amount"
        fieldlabel="Amount"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-amount"
            max="1000"
            min="1"
            placeholder="Amount"
            type="number"
            value="2"
          />
        </tm-field-group-stub>
         
        <!---->
         
        <!---->
      </tm-form-group-stub>
       
      <hr />
    </tm-part-stub>
     
    <tm-part-stub>
      <tm-form-group-stub
        fieldid="password"
        fieldlabel="Account password"
      >
        <tm-field-stub
          id="password"
          placeholder="password..."
          type="password"
          value="1234567890"
        />
         
        <!---->
         
        <input
          id="showPasswordCheckbox"
          type="checkbox"
        />
         
        <label
          for="showPasswordCheckbox"
        >
          Show password
        </label>
      </tm-form-group-stub>
    </tm-part-stub>
     
    <div>
      <tm-btn-stub
        color="primary"
        id="send-btn"
        value="Send Tokens"
      />
    </div>
  </tm-form-struct-stub>
   
  <tm-modal-send-confirmation-stub
    amount="2"
    connected="true"
    denom="mycoin"
    recipient="tb1mjt6dcdru8lgdz64h2fu0lrzvd5zv8sfcvkv2l"
  />
</tm-page-stub>
`;

exports[`PageSend should work without providing a default denom 1`] = `
<tm-page-stub
  data-title="Send"
  menubody=""
  subtitle=""
  title=""
>
  <template>
    <tm-balance-stub
      tabs=""
    />
     
    <tool-bar-stub />
  </template>
   
  <tm-form-struct-stub
    submit="function () { [native code] }"
    width=""
  >
    <tm-part-stub
      title="Denomination Options"
    >
      <tm-form-group-stub
        fieldid="send-denomination"
        fieldlabel="Denomination"
      >
        <tm-field-stub
          id="send-denomination"
          options="[object Object],[object Object]"
          placeholder="Select token..."
          type="select"
          value=""
        />
         
        <tm-form-msg-stub
          name="Denomination"
          type="required"
        />
      </tm-form-group-stub>
    </tm-part-stub>
     
    <tm-part-stub
      title="Transaction Details"
    >
      <tm-form-group-stub
        fieldid="send-address"
        fieldlabel="Send To"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-address"
            placeholder="Address"
            type="text"
            value=""
          />
        </tm-field-group-stub>
         
        <!---->
      </tm-form-group-stub>
       
      <tm-form-group-stub
        fieldid="send-amount"
        fieldlabel="Amount"
      >
        <tm-field-group-stub>
          <tm-field-stub
            id="send-amount"
            max="0"
            min="0"
            placeholder="Amount"
            type="number"
            value="0"
          />
        </tm-field-group-stub>
         
        <!---->
         
        <!---->
      </tm-form-group-stub>
       
      <hr />
    </tm-part-stub>
     
    <tm-part-stub>
      <tm-form-group-stub
        fieldid="password"
        fieldlabel="Account password"
      >
        <tm-field-stub
          id="password"
          placeholder="password..."
          type="password"
          value=""
        />
         
        <tm-form-msg-stub
          name="Password"
          type="required"
        />
         
        <input
          id="showPasswordCheckbox"
          type="checkbox"
        />
         
        <label
          for="showPasswordCheckbox"
        >
          Show password
        </label>
      </tm-form-group-stub>
    </tm-part-stub>
     
    <div>
      <tm-btn-stub
        color="primary"
        id="send-btn"
        value="Send Tokens"
      />
    </div>
  </tm-form-struct-stub>
   
  <!---->
</tm-page-stub>
`;
